# Norscode-language

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  HANDLINGSPLAN.md  LOCAL_IDE.md  Makefile  Norscode IDE.spec  Procfile  README.md  ROADMAP.md  STUDIO_V2_ROADMAP.md  app.c  app.no  listemodul.no  main.py  nl  norcode.toml  norsklang.toml  package-release.sh  pyproject.toml  railway.toml  requirements-dev.txt  studio_driver_test  studio_driver_test.c  studio_driver_test.no  studio_json_test  studio_json_test.c  studio_json_test.no  tmp_debug_storage  tmp_debug_storage.c  tmp_debug_storage.no  website.no
.norscode/: studio_v2.session
compiler/: __init__.py  ast_bridge.py  ast_nodes.py  bytecode_backend.py  cgen.py  formatter.py  interpreter.py  lexer.py  loader.py  parser.py  selfhost_ast_bridge.py  selfhost_chain.py  selfhost_parser.py  semantic.py  toml_compat.py
deploy/: norscode.service
desktop_ide/: README.md  main.py  studio_engine.no
docs/: API_MIGRATION_NOTES.md  API_SCAFFOLD.md  API_VERSIONING.md  ASYNC_DESIGN.md  AUDIT_PATTERN.md  BACKEND_READINESS.md  CACHE_PATTERN.md  CLI_CONTRACT.md  COMPREHENSIONS_DESIGN.md  COMPREHENSIONS_SYNTAX.md  CONTAINER.md  COOKBOOK.md  DASHBOARD_EXPORTER_PATTERN.md  DATABASE_REPOSITORY_PATTERN.md  DEPLOYMENT_PLAYBOOK.md  DEPRECATION_POLICY.md  EXAMPLES.md  FASTAPI_ROADMAP.md  FILE_OBJECT_STORAGE_PATTERN.md  FORMATTER_PLAN.md  FRONTEND_A11Y_TESTS.md  FRONTEND_ACCESSIBILITY.md  FRONTEND_ACTIVE_NAV.md  FRONTEND_API_CLIENT.md  FRONTEND_ASSETS.md  FRONTEND_ASSET_BUNDLING.md  FRONTEND_ASYNC_SUBMIT.md  FRONTEND_BROWSER_AUTH.md  FRONTEND_BROWSER_E2E.md  FRONTEND_CACHE_HEADERS.md  FRONTEND_CACHE_MODEL.md  FRONTEND_CLIENT_ROUTING.md  FRONTEND_CLIENT_VALIDATION.md  FRONTEND_COLOR_MODES.md  FRONTEND_COMPONENT_LIBRARY.md  FRONTEND_COMPONENT_MODEL.md  FRONTEND_COMPONENT_TESTS.md  FRONTEND_CONTAINER_CDN.md  FRONTEND_DEPLOY_ROLLBACK.md  FRONTEND_DESIGN_TOKENS.md  (+72 more)
examples/: README.md  advanced  advanced.c  advanced.no  audit.no  cache.no  cli  cli.c  cli.no  csrf.no  db.no  db_integration.no  db_repository.no  file_object_storage.no  format_demo.no  frontend.no  gui_demo  gui_demo.c  helpdesk.no  http.no  json_schema.no  lint_demo.no  logging.no  map.no  metrics.no  observability_export.no  secrets.no  struct  struct.c  struct.no  todo_app  todo_app.no  trace.no  web  web.c  web.no  web_api_versioning.no  web_auth.no  web_auth_protected.no  web_cookies.no  (+23 more)
norcode/: __main__.py  _bootstrap.py  cli.py
norscode/: __init__.py
norsklang/: __init__.py  __main__.py  cli.py
runtime/: Cargo 2.toml  Cargo.toml  README 2.md
samples/: app  repro.no  tekstmodul.no
scripts/: build-site.sh  build-standalone.py  build-standalone.sh  dev-setup.sh  install-desktop-ide.command  install-desktop-ide.ps1  install-norscode.ps1  install-norscode.sh  install-vscode-ide.sh  package-desktop-ide.ps1  package-desktop-ide.sh  serve-site.sh  start-desktop-ide.command
selfhost/: compiler.no
std/: audit.no  cache.no  csrf.no  db.no  env.no  feil.no  fil.no  gui.no  http.no  json.no  lagring.no  liste.no  log.no  math.no  metrics.no  ordbok.no  path.no  secrets.no  tekst.no  trace.no  web.no
studio_v2/: studio_state.no  symbol.no
tests/: ir_snapshot_cases.json  selfhost_parser_core_cases.json  selfhost_parser_m1_cases.json  selfhost_parser_m2_cases.json  std.math.no  test_assert.c  test_assert_eq.c  test_assert_text.no  test_async_runtime.no  test_async_syntax.no  test_async_timeout.no  test_audit.no  test_cache.no  test_comprehension.no  test_csrf.no  test_db.no  test_db_integration.no  test_dependency_import.no  test_elif.c  test_empty_string_list  test_empty_string_list.c  test_empty_string_list.no  test_empty_text_list.no  test_field_access.no  test_fil.no  test_file_object_storage.no  test_for.c  test_generic_containers.no  test_http_helpers.no  test_if.c  test_ifexpr_elif.no  test_io_error.no  test_json.no  test_json_array.no  test_json_schema.no  test_json_typed.no  test_lambda.no  test_list_std.no  test_logging.no  (+44 more)
(+263 files in other folders)
