[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "norsklang"
version = "0.1.0"
description = "NorskLang compiler and CLI"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["norsk", "language", "compiler", "cli"]
authors = [
  { name = "Jan Steinar Sætre" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/rfwwp8k542-maker/norsklang_6i"
Repository = "https://github.com/rfwwp8k542-maker/norsklang_6i"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "twine>=5.1.1",
]

[project.scripts]
norsklang = "norsklang.cli:main_cli"
nl = "norsklang.cli:main_cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["compiler*", "norsklang*"]
