[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "norcode"
version = "0.1.0"
description = "Norscode compiler and CLI"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["norsk", "language", "compiler", "cli"]
authors = [
  { name = "Jan Steinar Sætre" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/rfwwp8k542-maker/Norscode"
Repository = "https://github.com/rfwwp8k542-maker/Norscode"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "twine>=5.1.1",
]

[project.scripts]
norcode = "norcode.cli:main_cli"
nor = "norcode.cli:main_cli"
norsklang = "norcode.cli:main_cli"
nl = "norcode.cli:main_cli"
nc = "norcode.cli:main_cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["compiler*", "norsklang*", "norcode*"]
