[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "norscode"
version = "0.1.0"
description = "NorCode compiler and CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "tomli>=2.0.0; python_version < '3.11'",
]
keywords = ["norsk", "language", "compiler", "cli"]
authors = [
  { name = "Jan Steinar Sætre" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/rfwwp8k542-maker/NorCode"
Repository = "https://github.com/rfwwp8k542-maker/NorCode"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "twine>=5.1.1",
]

[project.scripts]
norscode = "norscode.cli:main_cli"
nor = "norscode.cli:main_cli"
norsklang = "norscode.cli:main_cli"
nl = "norscode.cli:main_cli"
nc = "norscode.cli:main_cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["compiler*", "norsklang*", "norscode*"]
